[Docs] Match new activation responses
